--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,33 @@
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
   }
-  
+
+
   nav {
     margin: 0;
     width: 100%;
     height: 80px;
-    background-color: black;
+    background-color: #488FB1;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     text-decoration: none;
+  }
+  @media only screen 
+  and (min-device-width : 320px) 
+  and (max-device-width : 480px) {
+  nav{
+    width: 100%;
+  }
+  }
+
+  @media only screen 
+  and (min-device-width : 320px) 
+  and (max-device-width : 480px) {
+  nav a{
+    font-size: 1.2rem;
+  }
   }
   
   a {
@@ -25,6 +41,10 @@
     margin: 10px;
     font-size: 25px;
   }
+
+  a:hover{
+    color: #C1F8CF;
+  }
   
   .createPostPage {
     width: 100%;
@@ -32,30 +52,47 @@
     display: grid;
     place-items: center;
   }
-
-  @media (max-width: 468px) {
-    .createPostPage {
-      width: 100%;
-    }
-  }
   
   .cpContainer {
     width: 500px;
     height: auto;
     padding: 20px;
-    background-color: black;
+    background-color: #533E85;
     border-radius: 12px;
     color: white;
     display: flex;
     flex-direction: column;
   }
+  @media only screen 
+  and (min-device-width : 320px) 
+  and (max-device-width : 480px) {
+  .cpContainer{
+    width: 95%;
+  }
+}
   
   .cpContainer h1 {
     text-align: center;
   }
+
+  @media only screen 
+  and (min-device-width : 320px) 
+  and (max-device-width : 480px) {
+  .cpContainer h1{
+    font-size: 1.2rem;
+  }
+}
   
   .cpContainer label {
     font-size: 25px;
+  }
+
+  @media only screen 
+  and (min-device-width : 320px) 
+  and (max-device-width : 480px) {
+  .cpContainer label{
+    font-size: 1.2rem;
+  }
   }
   .cpContainer .inputGp {
     margin-top: 30px;
@@ -101,7 +138,7 @@
   }
   
   .loginPage p {
-    font-size: 30px;
+    font-size: 1.9rem;
   }
   
   /* GOOGLE BUTTOn */
@@ -151,21 +188,28 @@
   }
   
   .homePage .post {
-    width: 600px;
+    width: 60%;
     height: auto;
     max-height: 600px;
     background-color: rgb(250, 250, 250);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.14) 0px 3px 8px;
     margin: 20px;
     padding: 20px;
     border-radius: 15px;
   }
+  @media (max-width: 576px) { 
+      .homepage {
+        background-color: red;
+      }
+  }
+
   
   .post .postHeader {
     display: flex;
     justify-content: center;
     width: 100%;
   }
+ 
   
   .postHeader .title {
     flex: 50%;
@@ -193,3 +237,20 @@
     overflow: hidden;
     overflow-y: auto;
   }
+
+  @media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+  .homePage .post {
+    width: 95%;
+  }
+}
+
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+  .loginPage p {
+    font-size: 1.3rem;
+  }
+}
+   
