--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,14 @@
     width: 95%;
   }
 }
+
+  @media only screen 
+  and (min-device-width : 480px) 
+  and (max-device-width : 1000px) {
+  .cpContainer{
+    width: 96%;
+  }
+  }
   
   .cpContainer h1 {
     text-align: center;
@@ -252,5 +260,31 @@ and (max-device-width : 480px) {
   .loginPage p {
     font-size: 1.3rem;
   }
+}
+
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #488FB1;
+  color: #488FB1;
+  cursor: pointer;
+}
+.paginationBttns a:hover {
+  color: white;
+  background-color: #488FB1;
+}
+
+.paginationActive a {
+  color: white;
+  background-color: #488FB1;  
 }
    
